--- a/package.json
+++ b/package.json
@@ -12,10 +12,12 @@
     "graphql": "^0.13.1",
     "graphql-yoga": "1.3.2",
     "jsonwebtoken": "8.1.1",
-    "prisma-binding": "1.5.7"
+    "prisma-binding": "1.5.7",
+    "ramda": "^0.25.0"
   },
   "devDependencies": {
     "@types/bcryptjs": "2.4.1",
+    "@types/ramda": "types/npm-ramda#dist",
     "dotenv-cli": "1.4.0",
     "graphql-cli": "2.14.1",
     "nodemon": "1.15.0",
